--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
             <nav>
              <a href="https://boosty.to/yb_z3f1r/donate" class="about">Поддержка автора</a>
              <a href="#" class="blog">Творчество</a>
-             <a href="#" class="projects">Про нас</a>
-             <a href="#" class="contact">Ссылка на книгу</a>
+             <a href="https://fartul0n.github.io/CTRANITCA2/" class="projects">Про нас</a>
+             <a href="https://fartul0n.github.io/CTRANITCA3/" class="contact">Ссылка на книгу</a>
              </nav>
         </header>
         <main>
